--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="hello_world_title">Hello Title</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="hello_world_guide">Hi! Just put your name and click on the fab ;)</string>
 
 
 </resources>
